--- a/scss/component/_box.scss
+++ b/scss/component/_box.scss
@@ -50,8 +50,11 @@ input {
 
 body,
 #overlay {
-    width: 100vw;
     height: 100vh;
+}
+
+#overlay {
+    width: 100vw;
 }
 
 body {
@@ -70,7 +73,7 @@ body {
     position: relative;
     margin: auto;
     padding: 1rem;
-    width: 50%;
+    width: 400px;
     top: 12%;
     background-color: white;
     border: 0 solid $primaryColorLight;
